remove records from log
